--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,4 +44,13 @@
         android:layout_marginTop="60dp"
         android:padding="10dp"
         android:text="LRecyclerView展示" />
+    <TextView
+        android:id="@+id/tv_ListDragMenu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="18sp"
+        android:textColor="@color/colorPrimary"
+        android:layout_marginTop="60dp"
+        android:padding="10dp"
+        android:text="ListDragMenu展示" />
 </LinearLayout>
